--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,14 @@ h1, h2, h3, h4, h5, h6 {
   transition: all 0.5s;
   background: #0f2835;
   top: 44px;
+  width: 100%;
+  padding: 0 0 40%;
+  border: 1px solid;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-left: auto;
+  margin-right: auto;
 }
 #header.header-scrolled {
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
