--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,15 @@ a:hover {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
+   width: 100%;
+   height: 0;
+   padding: 0 0 40%;
+   border: 1px solid;
+   background-size: 100%;
+   background-repeat: no-repeat;
+   background-size: cover;
+   margin-left: auto;
+   margin-right: auto;
 }
 
 /*--------------------------------------------------------------
